# tiny-shell

./: .gitignore  CMakeLists.txt  doxygen-config
include/: alloc.h  custom_hash.h  dalloc.h  dictionary.h  env.h  hash_table.h  key_value.h  linked_list.h  stack.h  version.h.in
include/handler/: env.h  interrupt.h  process.h
include/io/: dinput.h
include/structure/: hash_table.h  key_value.h  stack.h
src/: custom_hash.c  dalloc.c  dictionary.c  dinput.c  env.c  hash_table.c  interrupt.c  key_value.c  linked_list.c  main.c  stack.c
